--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,11 +6,14 @@
       <link rel="stylesheet" href="/css/skeleton.css">
      <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/style.css">
+     <script src="/client.js"></script>
     <title>WC Reg Numbers</title>
 </head>
 
-    
-     {{{body}}} 
+<div class="container">
+{{{body}}} 
+</div>    
+     
 
     
 
