--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,3 +61,19 @@ body{
     text-transform: capitalize;
     font-weight: bold;
   }
+
+  a{
+    text-decoration: none;
+    color: whitesmoke;
+  }
+
+  .firstSection{
+    text-align: center;
+    color: #f20202;
+  }
+
+  h6{
+    text-align: center;
+    color: #f20202;
+    font-size: 1.2em;
+  }
