--- a/public/css/skeleton.css
+++ b/public/css/skeleton.css
@@ -403,7 +403,15 @@ there.
 
 
 /* Larger than mobile */
-@media (min-width: 400px) {}
+@media (max-width: 400px) {
+  img{
+    display: none;
+  }
+
+  h1{
+    box-shadow: 0 8px 6px -6px black;
+  }
+}
 
 /* Larger than phablet (also point when grid becomes active) */
 @media (min-width: 550px) {}
