--- a/public/css/skeleton.css
+++ b/public/css/skeleton.css
@@ -411,10 +411,16 @@ there.
   h1{
     box-shadow: 0 8px 6px -6px black;
   }
+
 }
 
 /* Larger than phablet (also point when grid becomes active) */
-@media (min-width: 550px) {}
+@media (max-width: 420px) {
+  
+  .btnAdd {
+    margin-top: 5%
+  }
+}
 
 /* Larger than tablet */
 @media (min-width: 750px) {}
